fixed the annoying white space on the right

--- a/2022/style/style.css
+++ b/2022/style/style.css
@@ -104,7 +104,7 @@ body {
   display: flex;
   top: 50%;
   transform: translateY(-50%);
-  height: 5vh;
+  height: 4vh;
   left: 3vh;
 }
 
@@ -118,9 +118,10 @@ body {
 }
 
 #s1 {
-          vertical-align: middle;
-          width: 80vw;
-          padding-top: 10vh;
+vertical-align: middle;
+width: 60vw;
+padding-top: 10vh;
+padding-bottom: 10vh;
         }
 
 #s2 .content {
@@ -141,7 +142,7 @@ body {
 }
 
 .section {
-  padding: 10vw;
+
 }
 
 .recruitment video {
@@ -242,6 +243,7 @@ body {
 
 #s3 .content {
   padding-top: 10%;
+  padding-bottom: 7%;
   width: 100vw;
   background-color: black;
   vertical-align: middle;
@@ -308,6 +310,8 @@ body {
 
 #s4 .content {
   vertical-align: middle;
+  padding-top: 10vh;
+  
 }
 
 #s4 p a {
@@ -378,6 +382,7 @@ body {
 
 #s6 .content {
   vertical-align: middle;
+  padding-top: 10vh;
 }
 
 #s6 p a {
@@ -1096,5 +1101,6 @@ li {
           vertical-align: left;
           width: 100vw;
           padding-top: 10vh;
+
         }
     } 
